--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Bros Server</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="framework/bootstrap-4.5.2-dist/css/bootstrap.min.css">
 </head>
 
 <body>
-
-    <header></header>
+    <header>
+        <div id="particles-js"></div>
+        <nav class="navbar-light bg-sky">
+            <center>
+                <a class="navbar-brand" href="index.htnl">
+                    <img src="img/world_bros.png" width="30" height="30" class="d-inline-block float-left logo" alt=""
+                        loading="lazy">
+                    <h1 class="text-right title">World Bros Server</h1>
+                </a>
+            </center>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 
+    <script src="framework/jquery/jquery-3.5.1.min.js"></script>
+    <script src="framework/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
+    <script src="framework/particles.js-master/particles.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
