--- a/index.html
+++ b/index.html
@@ -22,7 +22,32 @@
             </center>
         </nav>
     </header>
-    <main></main>
+    <main class="row">
+        <div class="col-sm-3">
+            <a href="https://minecraftpocket-servers.com/server/103480/"><img
+                    src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png" border="0"></a>
+                    <div style="margin-top: 1em;">
+                        <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
+                    </div>
+        </div>
+        <div class="col-lg">
+            <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
+                Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
+                undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+                Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the
+                theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor
+                sit amet..", comes from a line in section 1.10.32.
+
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+                exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+            </p>
+        </div>
+        <div class="col-sm-1"></div>
+    </main>
     <footer></footer>
 
     <script src="framework/jquery/jquery-3.5.1.min.js"></script>
