--- a/index.html
+++ b/index.html
@@ -15,40 +15,55 @@
         <nav class="navbar-light bg-sky">
             <center>
                 <a class="navbar-brand" href="index.htnl">
-                    <img src="img/world_bros.png" width="30" height="30" class="d-inline-block float-left logo" alt=""
-                        loading="lazy">
+                    <div class="d-none d-sm-block">
+                        <img src="img/world_bros.png" class="d-inline-block float-left logo" alt="" loading="lazy">
+                    </div>
                     <h1 class="text-right title">World Bros Server</h1>
                 </a>
             </center>
         </nav>
     </header>
-    <main class="row">
-        <div class="col-sm-3">
-            <a href="https://minecraftpocket-servers.com/server/103480/"><img
-                    src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png" border="0"></a>
-                    <div style="margin-top: 1em;">
-                        <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
-                    </div>
-        </div>
-        <div class="col-lg">
-            <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
-                Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
-                undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
-                Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the
-                theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor
-                sit amet..", comes from a line in section 1.10.32.
+    <main class="container">
+        <div class="row">
 
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-            </p>
+            <!-- Grid esquerda -->
+            <div class="col-sm-3">
+                <div>
+                    <a href="https://minecraftpocket-servers.com/server/103480/"><img
+                            src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png"
+                            border="0"></a>
+                </div>
+                <div class="mt-3">
+                    <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
+                </div>
+                <div>
+                    <a class="btn btn-primary" href="https://server.pro/server/15745071" role="button">Fazer doação</a>
+                </div>
+            </div>
+
+            <!-- Grid central -->
+            <div class="col-lg">
+                <p>
+                    Servidor de sobrevivência da anarquia. Desenvolva sua vila, base, reinos, faça sua bandeira. faça
+                    sua história aqui. Chame seus amigos para obter ajuda, a única regra é não usar Hacker.
+                </p>
+            </div>
+
+            <!-- Grid direita -->
+            <div class="col-sm-1"></div>
         </div>
-        <div class="col-sm-1"></div>
     </main>
-    <footer></footer>
+    <footer class="bg-sky p-4">
+        <div class="row container">
+            <div class="col">
+                <a href="https://minecraftpocket-servers.com/server/103480/"><img
+                        src="https://minecraftpocket-servers.com/server/103480/banners/leaderboard-3.png"
+                        border="0"></a>
+            </div>
+            <div class="col-sm">
+            </div>
+        </div>
+    </footer>
 
     <script src="framework/jquery/jquery-3.5.1.min.js"></script>
     <script src="framework/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
