Desenvolvendo o corpo da página

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row">
 
             <!-- Grid esquerda -->
-            <div class="col-sm-3">
+            <div class="col-sm-3 mb-3">
                 <div>
                     <a href="https://minecraftpocket-servers.com/server/103480/"><img
                             src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png"
@@ -56,11 +56,11 @@
     <footer class="bg-sky p-4">
         <div class="row container">
             <div class="col">
-                <a href="https://minecraftpocket-servers.com/server/103480/"><img
+                <!-- <a href="https://minecraftpocket-servers.com/server/103480/"><img
                         src="https://minecraftpocket-servers.com/server/103480/banners/leaderboard-3.png"
-                        border="0"></a>
+                        border="0"></a> -->
             </div>
-            <div class="col-sm">
+            <div class="col">
             </div>
         </div>
     </footer>
