--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Bros Server</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="framework/bootstrap-4.5.2-dist/css/bootstrap.min.css">
 </head>
@@ -37,16 +38,51 @@
                     <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
                 </div>
                 <div>
-                    <a class="btn btn-primary" href="https://server.pro/server/15745071" role="button">Fazer doação</a>
+                    <a class="btn btn-primary doacao" href="https://server.pro/server/15745071" role="button">Fazer
+                        doação</a>
+                </div>
+
+                <div class="dropdown mt-3">
+                    <button style="width: 100%;" class="btn btn-secondary dropdown-toggle" type="button"
+                        id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Mais
+                    </button>
+                    <div style="width: 100%;" class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <a href="#" class="dropdown-item" type="button">Loja</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item" type="button">Suporte</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item" type="button">Galeria</a>
+                    </div>
                 </div>
             </div>
 
             <!-- Grid central -->
             <div class="col-lg">
-                <p>
-                    Servidor de sobrevivência da anarquia. Desenvolva sua vila, base, reinos, faça sua bandeira. faça
-                    sua história aqui. Chame seus amigos para obter ajuda, a única regra é não usar Hacker.
-                </p>
+
+                <!-- Descrição -->
+                <div id="box-text" class="p-2 mb-3">
+                    <p>
+                        Servidor de factions survial Minecraft bedrock edition. Desenvolva sua vila, base, reinos, faça
+                        sua bandeira.
+                        Faça
+                        sua história aqui, seja um rei.
+                    </p>
+                </div>
+
+                <div id="box-text" class="p-3">
+                    <h4>Detalhes</h3>
+                        <ul>
+                            <li>IP: <b>worldbros.serv.gs</b></li>
+                            <li>Porta: <b>40372</b></li>
+                        </ul>
+
+                        <h4>Regras</h3>
+                            <ul>
+                                <li>Não use progamas de terceiros para ter vantagens no jogo, isso não é legal.</li>
+                                <li>Evite usar palavrões no chat global, é feio.</li>
+                            </ul>
+                </div>
             </div>
 
             <!-- Grid direita -->
@@ -54,19 +90,27 @@
         </div>
     </main>
     <footer class="bg-sky p-4">
-        <div class="row container">
-            <div class="col">
+        <div class="row container text-white">
+            <div class="col-lg">
+                <h2 class="title">World Bros Server</h2>
                 <!-- <a href="https://minecraftpocket-servers.com/server/103480/"><img
                         src="https://minecraftpocket-servers.com/server/103480/banners/leaderboard-3.png"
                         border="0"></a> -->
             </div>
             <div class="col">
+                <h4>Contato</h4>
+                <ul>
+                    <li>E-mail: world.bros@gmail.com</li>
+                    <li>E-mail developer: nogueirarenzoso@gmail.com</li>
+                </ul>
             </div>
         </div>
     </footer>
 
+    <script src="framework/popper/popper.min.js"></script>
     <script src="framework/jquery/jquery-3.5.1.min.js"></script>
-    <script src="framework/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
+    <!-- <script src="framework/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script> -->
+    <script src="framework/bootstrap-4.5.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="framework/particles.js-master/particles.js"></script>
     <script src="js/script.js"></script>
 </body>
