--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="framework/bootstrap-4.5.2-dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <div id="particles-js"></div>
         <nav class="navbar-light bg-sky">
             <center>
-                <a class="navbar-brand" href="index.htnl">
+                <a class="navbar-brand" href="index.htnl" target="_blank">
                     <div class="d-none d-sm-block">
                         <img src="img/world_bros.png" class="d-inline-block float-left logo" alt="" loading="lazy">
                     </div>
@@ -29,18 +30,27 @@
 
             <!-- Grid esquerda -->
             <div class="col-sm-3 mb-3">
-                <div>
-                    <a href="https://minecraftpocket-servers.com/server/103480/"><img
-                            src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png"
-                            border="0"></a>
-                </div>
-                <div class="mt-3">
-                    <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
-                </div>
-                <div>
-                    <a class="btn btn-primary doacao" href="https://server.pro/server/15745071" role="button">Fazer
-                        doação</a>
-                </div>
+                <center>
+                    <div>
+                        <a class="float-center" href="https://minecraftpocket-servers.com/server/103480/"
+                            target="_blank"><img
+                                src="https://minecraftpocket-servers.com/server/103480/banners/half-banner-3.png"
+                                border="0"></a>
+                    </div>
+                    <!-- Discord -->
+                    <div class="mt-3 d-none d-lg-block d-xl-none">
+                        <iframe src="https://discord.com/widget?id=765817125263900673&theme=dark" width="235"
+                            height="200" allowtransparency="true" frameborder="0"
+                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    </div>
+                    <div class="mt-3">
+                        <a style="width: 100%;" class="btn btn-primary doacao" href="https://server.pro/server/15745071"
+                            role="button">Fazer
+                            doação <span class="material-icons float-right">
+                                favorite
+                            </span></a>
+                    </div>
+                </center>
 
                 <div class="dropdown mt-3">
                     <button style="width: 100%;" class="btn btn-secondary dropdown-toggle" type="button"
@@ -48,15 +58,22 @@
                         Mais
                     </button>
                     <div style="width: 100%;" class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <a href="#" class="dropdown-item" type="button">Loja</a>
+                        <a href="#" class="dropdown-item" type="button">Loja <span class="material-icons float-right">
+                                shopping_cart
+                            </span></a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item" type="button">Suporte</a>
+                        <a href="#" class="dropdown-item" type="button">Suporte <span
+                                class="material-icons float-right">
+                                record_voice_over
+                            </span></a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item" type="button">Galeria</a>
+                        <a href="#" class="dropdown-item" type="button">Galeria <span
+                                class="material-icons float-right">
+                                backup_table
+                            </span></a>
                     </div>
                 </div>
             </div>
-
             <!-- Grid central -->
             <div class="col-lg">
 
@@ -93,15 +110,18 @@
         <div class="row container text-white">
             <div class="col-lg">
                 <h2 class="title">World Bros Server</h2>
-                <!-- <a href="https://minecraftpocket-servers.com/server/103480/"><img
-                        src="https://minecraftpocket-servers.com/server/103480/banners/leaderboard-3.png"
-                        border="0"></a> -->
+                <script src="https://minecraftpocket-servers.com/embed.js?id=103480&type=votes"></script>
             </div>
             <div class="col">
-                <h4>Contato</h4>
+                <h4>Contato <span class="material-icons">
+                        perm_phone_msg
+                    </span></h4>
                 <ul>
-                    <li>E-mail: world.bros@gmail.com</li>
-                    <li>E-mail developer: nogueirarenzoso@gmail.com</li>
+                    <li>E-mail server: <a href="http://world.bros@gmail.com" target="_blank">world.bros@gmail.com</a>
+                    </li>
+                    <li>E-mail developer: <a href='mailto:nogueirarenzoso@gmail.com?body=Nick Jogador: ______'
+                            target="_blank">nogueirarenzoso@gmail.com</a></li>
+                    <li>Discord: <a href="http://discord.gg/kTmJGC" target="_blank">discord.gg/kTmJGC</a></li>
                 </ul>
             </div>
         </div>
