--- a/suporte.html
+++ b/suporte.html
@@ -35,30 +35,29 @@
                 </div>
                 <!-- Grid central -->
                 <div class="col-lg">
-
-                    <!-- Descrição -->
-                    <div id="box-text" class="p-2 mb-3">
-                        <p>
-                            Servidor de factions survial Minecraft bedrock edition. Desenvolva sua vila, base, reinos,
-                            faça
-                            sua bandeira.
-                            Faça
-                            sua história aqui, seja um rei.
-                        </p>
-                    </div>
-
-                    <div id="box-text" class="p-3">
-                        <h4>Detalhes</h3>
-                            <ul>
-                                <li>IP: <b>{{servidor.enderecoServidor }}</b></li>
-                                <li>Porta: <b>{{servidor.portaServidor }}</b></li>
-                            </ul>
-
-                            <h4>Regras</h3>
-                                <ul>
-                                    <li v-for="(regras, index) in regrasServidor">{{(index + 1) + " - " + regras }}</li>
-                                </ul>
-                    </div>
+                    <h3>Suporte</h3>
+                    <form>
+                        <div class="row">
+                            <div class="form-group col">
+                                <label for="exampleInputEmail1">Endereço de E-mail</label>
+                                <input type="email" class="form-control" id="enailUser" required>
+                            </div>
+                            <div class="form-group col">
+                                <label for="exampleInputPassword1">Nick name</label>
+                                <input type="text" class="form-control" id="nameUser" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Mensagem</label>
+                            <textarea class="form-control" id="mensageUser" rows="3"
+                                required></textarea>
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                            <label class="form-check-label" for="exampleCheck1">Marque aqui para proseguir</label>
+                        </div>
+                        <a type="submit" class="btn btn-primary">Enviar</a>
+                    </form>
                 </div>
 
                 <!-- Grid direita -->
